trying different methods for starting App